assets/css/style.css
* {
    /*  border: 1px solid black; */
    margin: 0;
    padding: 0;
    box-sizing: boder-box;
}

 :root {
    --btn: rgb(47, 26, 106);
    --btn-hover: rgb(181, 85, 227);
    --hiscore1: rgb(212, 205, 230);
    --hiscore2: rgb(236, 236, 247);
    font-size: 140%;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400&family=Roboto:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@200&display=swap');
body {
    font-family: 'Lato', sans-serif;
}

header,
main {
    display: flex;
    padding: 1rem;
}

header div {
    width: 50%;
    font-size: 1.1rem;
}

header #high-score {
    cursor: pointer;
    color: var(--btn-hover);
    font-weight: 300;
}

header #quiz-timer {
    text-align: right;
}

main {
    flex-direction: column;
    min-height: 50vh;
}

main div,
#feedback {
    margin: 0 auto;
    min-width: 50%;
    max-width: 42rem;
    font-size: 1rem;
}

main div.intro,
.centered {
    text-align: center;
}

#start-quiz {
    margin-top: 1.8rem;
}

.intro h1,
.question h2,
.outro h2 {
    font-size: 2rem;
    font-family: 'Roboto Condensed', sans-serif;
    font-weight: 600;
    padding: 1rem 0;
}

#feedback {
    color: gray;
    font-size: 1.6rem;
    font-style: italic;
    font-weight: 100;
}

#feedback .feedback-wrapper {
    border-top: 2px solid;
    opacity: 0;
}

.flashBack {
    animation: feedback-flash 2s ease 1;
}

@keyframes feedback-flash {
    0% {
        opacity: 1
    }
    65% {
        opacity: 1
    }
    100% {
        opacity: 0;
        ;
    }
}

main div p {
    font-size: 1.3rem;
    font-weight: 300;
}

main .outro div {
    font-size: 1.5rem;
}

ol {
    list-style-position: inside;
    padding: 0;
}

li.btn {
    display: list-item;
    text-align: left;
    margin-bottom: .8rem;
    width: 33%;
}

.btn {
    border: none;
    background-color: var(--btn);
    border-radius: 12px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
    color: white;
    display: inline-block;
    font-size: 1.2rem;
    padding: .8rem 1.7rem .6rem 1.7rem;
    margin-right: .6rem;
    text-align: center;
    cursor: pointer;
}

.btn:hover {
    background-color: var(--btn-hover);
}

form {
    display: flex;
    align-items: baseline;
    justify-content: flex-start;
    flex-wrap: nowrap;
    font-size: 1.3rem;
}

.form * {
    margin-right: .5rem;
    font-size: 1.5rem;
}

.form span {
    font-style: normal;
    align-self: flex-end;
}

.form input {
    flex: 3;
    position: relative;
    top: 0;
    outline: none;
    padding: 12px;
    border: 1px solid grey;
}

.hiscore-entry {
    font-size: 1.3rem;
    font-weight: 300;
    padding: .4rem;
    background-color: var(--hiscore1);
}

li.hiscore-entry:nth-child(2n) {
    background-color: var(--hiscore2);
}

.scores h1,
li.hiscore-entry:last-child {
    margin-bottom: 1rem;
}

